--- a/form.html
+++ b/form.html
@@ -18,10 +18,11 @@
         </div> <!-- end heading row /-->
         <div class="row myinput-row">
           <div class="form-group" id="usernameGroup">
+
             <label for="username" class="col-sm-2 control-label">Username</label>
             <div class="col-sm-2">
-              <input type="text" id="user" class="form-control input-md"
-                  placeholder="myusername" />
+              <input type="text" id="user" onchange="validateUsername()" class="form-control input-md"
+                  placeholder="myusername"   />
               <span id="usernameError" class="control-label hidden-message">
                 Error Placeholder (hidden)
               </span>
@@ -32,8 +33,8 @@
           <div class="form-group" id="passwordGroup">
             <label for="username" class="col-sm-2 control-label">Password</label>
             <div class="col-sm-2">
-              <input type="password" id="pass" class="form-control input-md"
-                  placeholder="mypassword" />
+              <input type="password" id="pass"  onchange="validatePassword()" class="form-control input-md"
+                  placeholder="mypassword"  />
               <span id="passwordError" class="control-label hidden-message">
                 Error Placeholder (hidden)
               </span>
@@ -43,7 +44,7 @@
         <div class="form-group">
           <div class="col-sm-offset-2 col-sm-10">
             <button type="button" class="btn btn-primary col-sm-1"
-              onclick="validate();"> <!-- Run JavaScript to validate input /-->
+              onclick="register()"> <!-- Run JavaScript to validate input /-->
               Register
             </button>
           </div>
